<resources>
    <string name="app_name">Countdown</string>
    <string name="my_events">My Events</string>
    <string name="add">Add</string>
    <string name="Home">Home</string>
    <string name="left_greater"><![CDATA[<]]></string>
    <string name="right_greater"><![CDATA[>]]></string>
    <string name="format_image">format_image</string>
    <string name="Select">Select</string>
    <string name="Add_an_Event">Add an Event!</string>
    <string name="format">Format</string>
    <string name="date">Date</string>
    <string name="colon">:</string>
    <string name="event_title">Event Title</string>
    <string name="back_button">back_button</string>
    <string name="next">next</string>
    <string name="D">D</string>
    <string name="W">W</string>
    <string name="F">F</string>
    <string name="M">M</string>
    <string name="DAYS">DAYS</string>
    <string name="Hours">Hours</string>
    <string name="Minutes">Minutes</string>
    <string name="Seconds">Seconds</string>
    <string name="SECONDS">SECONDS</string>
    <string name="HOURS">HOURS</string>
    <string name="MINUTES">MINUTES</string>
    <string name="MONTHS">MONTHS</string>
    <string name="Weeks">Weeks</string>
    <string name="Back">Back</string>
    <string name="TILL">TILL</string>
    <string name="remove_button">remove_button</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="pattern">pattern</string>
    <string name="Date">Date</string>
    <string name="Cloud">Cloud</string>
    <string name="Day">Day</string>
    <string name="Week">Week</string>
    <string name="WEEKS">WEEKS</string>
    <string name="Fortnight">Fortnight</string>
    <string name="FORTNIGHTS">FORTNIGHTS</string>
    <string name="Month">Month</string>
    <string name="calendar_footer">calendar_footer</string>
    <string name="calendar_pill">calendar_pill</string>
    <string name="cloud_eyes_one_dark">cloud_eyes_one_dark</string>

</resources>
