<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountdownAct"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="1dp">

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/navigationView"-->
    <!--        style="@style/CustomBottomNavigationView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="86dp"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:menu="@menu/activity_nav_menu"/>-->
    <ImageView
        android:id="@+id/gradientBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Cloud"
        android:scaleType="center"
        android:src="@drawable/background_grad_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:chipSpacing="8dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/act_all_clock_num_light"
            android:textColor="@color/white"
            android:text="@string/D"
            android:fontFamily="@font/viga"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/act_all_clock_num_light"
            android:textColor="@color/white"
            android:text="@string/W"
            android:fontFamily="@font/viga"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFortnight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/act_all_clock_num_light"
            android:textColor="@color/white"
            android:text="@string/F"
            android:fontFamily="@font/viga"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipBackgroundColor="@color/act_all_clock_num_light"
            android:textColor="@color/white"
            android:text="@string/M"
            android:fontFamily="@font/viga"/>
    </com.google.android.material.chip.ChipGroup>

    <View
        android:id="@+id/view2"
        android:layout_width="394dp"
        android:layout_height="729dp"
        android:background="@drawable/act_countdown_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.829" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:contentDescription="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/back"
        tools:ignore="ImageContrastCheck" />


    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="346dp"
        android:layout_height="120dp"
        android:gravity="center|top"
        android:text="@string/event_title"
        android:fontFamily="@font/viga"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <TextView
        android:id="@+id/dfDay"
        style="@style/numberStyle"
        android:layout_width="249dp"
        android:layout_height="271dp"
        android:gravity="top|center"
        android:textSize="186sp"
        android:fontFamily="@font/viga"
        app:layout_constraintBottom_toTopOf="@+id/dfMinutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/dfDayLabel"
        style="@style/labelStyle"
        android:layout_width="249dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="@string/DAYS"
        android:fontFamily="@font/viga"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/dfDay"
        app:layout_constraintEnd_toEndOf="@+id/dfDay"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dfDay"
        app:layout_constraintTop_toTopOf="@+id/dfDay"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/dfWeekDay"
        style="@style/numberStyle"
        android:layout_width="162dp"
        android:layout_height="140dp"
        android:gravity="top|center"
        android:textSize="84sp"
        android:fontFamily="@font/viga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <TextView
        android:id="@+id/dfWeek"
        style="@style/numberStyle"
        android:layout_width="162dp"
        android:layout_height="140dp"
        android:gravity="top|center"
        android:textSize="84sp"
        android:fontFamily="@font/viga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/dfFortnightWeek"
        style="@style/numberStyle"
        android:layout_width="162dp"
        android:layout_height="140dp"
        android:gravity="top|center"
        android:textSize="84sp"
        android:fontFamily="@font/viga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <TextView
        android:id="@+id/dfHours"
        style="@style/numberStyle"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:gravity="top|center"
        android:text="@string/Hours"
        android:fontFamily="@font/viga"
        android:textSize="84sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/dfMinutes"
        style="@style/numberStyle"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:gravity="top|center"
        android:text="@string/Minutes"
        android:fontFamily="@font/viga"
        android:textSize="84sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/dfSeconds"
        style="@style/numberStyle"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:gravity="top|center"
        android:text="@string/Seconds"
        android:fontFamily="@font/viga"
        android:textSize="84sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/dfMonth"
        style="@style/numberStyle"
        android:layout_width="162dp"
        android:layout_height="140dp"
        android:gravity="top|center"
        android:textSize="84sp"
        android:fontFamily="@font/viga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/dfWeekWeekLabel"
        style="@style/labelStyle"
        android:layout_width="162dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/DAYS"
        android:fontFamily="@font/viga"
        app:layout_constraintBottom_toBottomOf="@+id/dfWeekDay"
        app:layout_constraintEnd_toEndOf="@+id/dfWeekDay"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="@+id/dfWeekDay"
        app:layout_constraintTop_toBottomOf="@+id/dfWeek"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/dfSecondsLabel"
        style="@style/labelStyle"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/SECONDS"
        android:fontFamily="@font/viga"
        app:layout_constraintBottom_toBottomOf="@+id/dfSeconds"
        app:layout_constraintEnd_toEndOf="@+id/dfSeconds"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/dfSeconds"
        app:layout_constraintTop_toTopOf="@+id/dfSeconds"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dfHoursLabel"
        style="@style/labelStyle"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/HOURS"
        android:fontFamily="@font/viga"
        app:layout_constraintBottom_toBottomOf="@+id/dfHours"
        app:layout_constraintEnd_toEndOf="@+id/dfHours"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/dfHours"
        app:layout_constraintTop_toTopOf="@+id/dfHours"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dfMinutesLabel"
        style="@style/labelStyle"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/MINUTES"
        android:fontFamily="@font/viga"
        app:layout_constraintBottom_toBottomOf="@+id/dfMinutes"
        app:layout_constraintEnd_toEndOf="@+id/dfMinutes"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/dfMinutes"
        app:layout_constraintTop_toTopOf="@+id/dfMinutes"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/dfMonthLabel"
        style="@style/labelStyle"
        android:layout_width="162dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/MONTHS"
        android:fontFamily="@font/viga"
        app:layout_constraintBottom_toBottomOf="@+id/dfMonth"
        app:layout_constraintEnd_toEndOf="@+id/dfMonth"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dfMonth"
        app:layout_constraintTop_toTopOf="@+id/dfMonth"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dfWeekDayLabel"
        style="@style/labelStyle"
        android:layout_width="162dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/Weeks"
        android:fontFamily="@font/viga"
        app:layout_constraintBottom_toBottomOf="@+id/dfWeek"
        app:layout_constraintEnd_toEndOf="@+id/dfWeek"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/dfWeek"
        app:layout_constraintTop_toTopOf="@+id/dfWeek"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dfFortnightWeekLabel"
        style="@style/labelStyle"
        android:layout_width="162dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/Weeks"
        android:fontFamily="@font/viga"
        app:layout_constraintBottom_toBottomOf="@+id/dfFortnightWeek"
        app:layout_constraintEnd_toEndOf="@+id/dfFortnightWeek"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/dfFortnightWeek"
        app:layout_constraintTop_toTopOf="@+id/dfFortnightWeek"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/backButtonLabel"
        android:layout_width="62dp"
        android:layout_height="42dp"
        android:fontFamily="@font/viga"
        android:gravity="start|center"
        android:text="@string/Back"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tillView"
        android:layout_width="107dp"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="@string/TILL"
        android:fontFamily="@font/viga"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/sarahPhrases"
        android:layout_width="380dp"
        android:layout_height="181dp"
        android:fontFamily="@font/viga"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/eventTitle"
        app:layout_constraintVertical_bias="0.659" />

</androidx.constraintlayout.widget.ConstraintLayout>
