<!-- dialog_format_picker.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="407dp"
    android:layout_height="914dp"
    android:background="@android:color/transparent">

    <!-- Add your format options here -->

    <ImageView
        android:id="@+id/cloud_num_one"
        android:layout_width="530dp"
        android:layout_height="353dp"
        android:layout_marginEnd="132dp"
        android:scaleType="fitXY"
        android:scaleX="1.0"
        android:scaleY="1.0"
        android:src="@drawable/clouds_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        android:contentDescription="@string/Cloud" />

    <ImageView
        android:id="@+id/cloud_num_two"
        android:layout_width="530dp"
        android:layout_height="353dp"
        android:layout_marginStart="108dp"
        android:scaleType="fitXY"
        android:scaleX="1.0"
        android:scaleY="1.0"
        android:src="@drawable/clouds_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686"
        android:contentDescription="@string/Cloud"/>

    <Button
        android:id="@+id/dayButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/flyingbird"
        android:text="@string/Day"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cloud_num_one"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/weekButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/flyingbird"
        android:text="@string/Week"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cloud_num_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cloud_num_one"
        app:layout_constraintVertical_bias="0.696" />

    <Button
        android:id="@+id/fortnightButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/flyingbird"
        android:text="@string/Fortnight"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cloud_num_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cloud_num_two"
        app:layout_constraintTop_toTopOf="@+id/cloud_num_two" />

    <Button
        android:id="@+id/monthButton"
        style="@style/buttonStyle"
        android:layout_width="150dp"
        android:layout_height="62dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/flyingbird"
        android:text="@string/Month"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cloud_num_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/cloud_num_two"
        app:layout_constraintTop_toTopOf="@+id/cloud_num_two"
        app:layout_constraintVertical_bias="0.756" />

</androidx.constraintlayout.widget.ConstraintLayout>
