<!-- dialog_format_picker.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="412dp"
    android:layout_height="892dp"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/cloud_num_one"
        android:layout_width="530dp"
        android:layout_height="353dp"
        android:contentDescription="@string/Cloud"
        android:scaleType="fitXY"
        android:src="@drawable/act_add_clouds_three_cat_form_dark_outlined"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999" />

    <ImageView
        android:id="@+id/cloud_num_two"
        android:layout_width="530dp"
        android:layout_height="353dp"
        android:layout_marginStart="80dp"
        android:contentDescription="@string/Cloud"
        android:scaleType="fitXY"
        android:scaleX="1.0"
        android:scaleY="1.0"
        android:src="@drawable/act_add_clouds_two_cat_form_dark_outlined"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="84dp"
        android:layout_marginEnd="364dp"
        android:contentDescription="@string/cloud_eyes_one_dark"
        android:scaleType="centerCrop"
        android:src="@drawable/act_add_cloud_eyes_one_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="84dp"
        android:layout_marginStart="336dp"
        android:contentDescription="@string/cloud_eyes_one_dark"
        android:scaleType="centerCrop"
        android:src="@drawable/act_add_cloud_eyes_one_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <Button
        android:id="@+id/dayButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/cloud"
        android:text="@string/Day"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/act_add_text_colour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cloud_num_one"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/weekButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/cloud"
        android:text="@string/Week"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/act_add_text_colour"
        app:layout_constraintBottom_toBottomOf="@+id/cloud_num_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cloud_num_one"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/fortnightButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/cloud"
        android:text="@string/Fortnight"
        android:textColor="@color/act_add_text_colour"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cloud_num_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="@+id/cloud_num_two"
        app:layout_constraintTop_toTopOf="@+id/cloud_num_two"
        app:layout_constraintVertical_bias="0.47000003" />

    <Button
        android:id="@+id/monthButton"
        style="@style/buttonStyle"
        android:layout_width="180dp"
        android:layout_height="62dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/cloud"
        android:text="@string/Month"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/act_add_text_colour"
        app:layout_constraintBottom_toBottomOf="@+id/cloud_num_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/cloud_num_two"
        app:layout_constraintTop_toTopOf="@+id/cloud_num_two"
        app:layout_constraintVertical_bias="0.77" />

</androidx.constraintlayout.widget.ConstraintLayout>
