<!-- dialog_format_picker.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="412dp"
    android:layout_height="892dp"
    android:background="@android:color/transparent">

    <!-- Add your format options here -->


    <ImageView
        android:id="@+id/cloud_num_one"
        android:layout_width="530dp"
        android:layout_height="353dp"
        android:contentDescription="@string/Cloud"
        android:scaleType="fitXY"
        android:src="@drawable/act_add_clouds_three_cat_form_light_outlined"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <ImageView
        android:id="@+id/cloud_num_two"
        android:layout_width="530dp"
        android:layout_height="353dp"
        android:layout_marginStart="100dp"
        android:contentDescription="@string/Cloud"
        android:scaleType="fitXY"
        android:src="@drawable/act_add_clouds_one_cat_form_light_outlined"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <ImageView
        android:layout_width="101dp"
        android:layout_height="122dp"
        android:layout_marginEnd="276dp"
        android:contentDescription="@string/cloud_eyes_one_dark"
        android:scaleX="-0.8"
        android:src="@drawable/act_add_cloud_eyes_one_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <ImageView
        android:layout_width="101dp"
        android:layout_height="122dp"
        android:layout_marginEnd="360dp"
        android:contentDescription="@string/cloud_eyes_one_dark"
        android:scaleX="0.8"
        android:src="@drawable/act_add_cloud_eyes_one_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="54dp"
        android:layout_marginStart="358dp"
        android:contentDescription="@string/cloud_eyes_one_dark"
        android:scaleType="center"
        android:src="@drawable/act_add_cloud_eyes_two_two_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="84dp"
        android:layout_marginStart="274dp"
        android:contentDescription="@string/cloud_eyes_one_dark"
        android:scaleType="center"
        android:src="@drawable/act_add_cloud_eyes_two_one_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685" />

    <Button
        android:id="@+id/dayButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/cloud"
        android:text="@string/Day"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cloud_num_one"
        app:layout_constraintVertical_bias="0.13999999" />

    <Button
        android:id="@+id/weekButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/cloud"
        android:text="@string/Week"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cloud_num_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cloud_num_one"
        app:layout_constraintVertical_bias="0.66999996" />

    <Button
        android:id="@+id/fortnightButton"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/cloud"
        android:text="@string/Fortnight"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cloud_num_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="@+id/cloud_num_two"
        app:layout_constraintTop_toTopOf="@+id/cloud_num_two"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/monthButton"
        style="@style/buttonStyle"
        android:layout_width="180dp"
        android:layout_height="62dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/cloud"
        android:text="@string/Month"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cloud_num_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="@+id/cloud_num_two"
        app:layout_constraintTop_toTopOf="@+id/cloud_num_two"
        app:layout_constraintVertical_bias="0.77" />

</androidx.constraintlayout.widget.ConstraintLayout>
